--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
-<!DOCTYPE html><!--  This site was created by Dennis Snellenberg (Code by Dennis)  -->
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Flow/Digital Production House</title>
-    <meta name="description" content="Creating successful digital campaigs for companies of all sizes. We are Flow, Strategic design partner + Digital 
+    <title>Construct</title>
+    <meta name="description" content="Construct descript 
 Production House." />
-    <meta property="og:title" content="Flow/Digital Production House" />
-    <meta property="og:description" content="Creating successful digital campaigs for companies of all sizes. We are Flow, Strategic design partner + Digital 
+    <meta property="og:title" content="Construct" />
+    <meta property="og:description" content="Construct descript 
 Production House." />
     <meta property="og:image" content="" />
-    <meta property="og:site_name" content="Flow" />
+    <meta property="og:site_name" content="Construct" />
     <meta property="og:locale" content="en" />
     <meta property="og:type" content="website" />
-    <meta property="twitter:title" content="Flow/Digital Production House" />
-    <meta property="twitter:description" content="Creating successful digital campaigs for companies of all sizes. We are Flow, Strategic design partner + Digital 
+    <meta property="twitter:title" content="Construct" />
+    <meta property="twitter:description" content="Construct descript 
 Production House." />
     <meta property="twitter:image" content="" />
     <meta name="twitter:card" content="summary_large_image" />
