--- a/index.html
+++ b/index.html
@@ -439,14 +439,14 @@ Production House." />
                 <div class="single-work-slides">
                     <div class="single-work-height" data-work-height-index="1">
                         <div class="content-row content-row-number">
-                            <h4 class="m">1</h4>
+                            <h4 class="m">1st</h4>
                         </div>
                         <div class="content-row content-row-title">
-                            <h2 class="l roll-line">Project<br> Slide A</h2>
+                            <h2 class="l roll-line">Slide<br> Project A</h2>
                         </div>
                         <div class="content-row content-row-description">
                             <div class="content-col">
-                                <h4 class="xs roll-line">Digital Platform<br> /Rebrand</h4>
+                                <h4 class="xs roll-line">BluePrint<br> /Plan</h4>
                             </div>
                             <div class="content-col content-col-arrow">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -468,14 +468,14 @@ Production House." />
                     </div>
                     <div class="single-work-height" data-work-height-index="2">
                         <div class="content-row content-row-number">
-                            <h4 class="m">2</h4>
+                            <h4 class="m">2nd</h4>
                         </div>
                         <div class="content-row content-row-title">
-                            <h2 class="l roll-line">Project<br> Slide B</h2>
+                            <h2 class="l roll-line">Slide<br> Project A</h2>
                         </div>
                         <div class="content-row content-row-description">
                             <div class="content-col">
-                                <h4 class="xs roll-line">Direction<br> /Production</h4>
+                                <h4 class="xs roll-line">Render<br> /Real Picture</h4>
                             </div>
                             <div class="content-col content-col-arrow">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -516,7 +516,7 @@ Production House." />
                                         <a class="magnetic-click" href="#" data-magnetic-target
                                             data-magnetic-strength="75">
                                             <div class="magnetic-inner">
-                                                <h4>(About Project)</h4>
+                                                <h4>(About)</h4>
                                             </div>
                                         </a>
                                     </div>
@@ -527,7 +527,7 @@ Production House." />
                         </div>
                         <div class="col col-title">
                             <div class="col-row col-row-title">
-                                <h4 class="xs split-lines not-split">(About Project)</h4>
+                                <h4 class="xs split-lines not-split">(About)</h4>
                                 <h2 class="m split-lines not-split"><span class="spacer"></span>Lorem ipsum dolor sit
                                     amet, consectetur adipiscing elit. <br><br>
                                     Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -645,14 +645,14 @@ Production House." />
                 <div class="single-work-slides">
                     <div class="single-work-height" data-work-height-index="1">
                         <div class="content-row content-row-number">
-                            <h4 class="m">1</h4>
+                            <h4 class="m">1st</h4>
                         </div>
                         <div class="content-row content-row-title">
-                            <h2 class="l roll-line">Project<br> Slide A</h2>
+                            <h2 class="l roll-line">Slide<br> Project B</h2>
                         </div>
                         <div class="content-row content-row-description">
                             <div class="content-col">
-                                <h4 class="xs roll-line">Digital Platform<br> /Rebrand</h4>
+                                <h4 class="xs roll-line">BluePrint<br> /Plan</h4>
                             </div>
                             <div class="content-col content-col-arrow">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -674,14 +674,14 @@ Production House." />
                     </div>
                     <div class="single-work-height" data-work-height-index="2">
                         <div class="content-row content-row-number">
-                            <h4 class="m">2</h4>
+                            <h4 class="m">2nd</h4>
                         </div>
                         <div class="content-row content-row-title">
-                            <h2 class="l roll-line">Project<br> Slide B</h2>
+                            <h2 class="l roll-line">Slide<br> Project B</h2>
                         </div>
                         <div class="content-row content-row-description">
                             <div class="content-col">
-                                <h4 class="xs roll-line">Direction<br> /Production</h4>
+                                <h4 class="xs roll-line">Render<br> /Real Picture</h4>
                             </div>
                             <div class="content-col content-col-arrow">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -722,7 +722,7 @@ Production House." />
                                         <a class="magnetic-click" href="#" data-magnetic-target
                                             data-magnetic-strength="75">
                                             <div class="magnetic-inner">
-                                                <h4>(About Project)</h4>
+                                                <h4>(About)</h4>
                                             </div>
                                         </a>
                                     </div>
@@ -733,7 +733,7 @@ Production House." />
                         </div>
                         <div class="col col-title">
                             <div class="col-row col-row-title">
-                                <h4 class="xs split-lines not-split">(About Project)</h4>
+                                <h4 class="xs split-lines not-split">(About)</h4>
                                 <h2 class="m split-lines not-split"><span class="spacer"></span>Lorem ipsum dolor sit
                                     amet, consectetur adipiscing elit. <br><br>
                                     Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -851,14 +851,14 @@ Production House." />
                 <div class="single-work-slides">
                     <div class="single-work-height" data-work-height-index="1">
                         <div class="content-row content-row-number">
-                            <h4 class="m">1</h4>
+                            <h4 class="m">1st</h4>
                         </div>
                         <div class="content-row content-row-title">
-                            <h2 class="l roll-line">Project<br> Slide A</h2>
+                            <h2 class="l roll-line">Slide<br> Project C</h2>
                         </div>
                         <div class="content-row content-row-description">
                             <div class="content-col">
-                                <h4 class="xs roll-line">Digital Platform<br> /Rebrand</h4>
+                                <h4 class="xs roll-line">BluePrint<br> /Plan</h4>
                             </div>
                             <div class="content-col content-col-arrow">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -880,14 +880,14 @@ Production House." />
                     </div>
                     <div class="single-work-height" data-work-height-index="2">
                         <div class="content-row content-row-number">
-                            <h4 class="m">2</h4>
+                            <h4 class="m">2nd</h4>
                         </div>
                         <div class="content-row content-row-title">
-                            <h2 class="l roll-line">Project<br> Slide B</h2>
+                            <h2 class="l roll-line">Slide<br> Project C</h2>
                         </div>
                         <div class="content-row content-row-description">
                             <div class="content-col">
-                                <h4 class="xs roll-line">Direction<br> /Production</h4>
+                                <h4 class="xs roll-line">Render<br> /Real Picture</h4>
                             </div>
                             <div class="content-col content-col-arrow">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -928,7 +928,7 @@ Production House." />
                                         <a class="magnetic-click" href="#" data-magnetic-target
                                             data-magnetic-strength="75">
                                             <div class="magnetic-inner">
-                                                <h4>(About Project)</h4>
+                                                <h4>(About)</h4>
                                             </div>
                                         </a>
                                     </div>
@@ -939,7 +939,7 @@ Production House." />
                         </div>
                         <div class="col col-title">
                             <div class="col-row col-row-title">
-                                <h4 class="xs split-lines not-split">(About Project)</h4>
+                                <h4 class="xs split-lines not-split">(About)</h4>
                                 <h2 class="m split-lines not-split"><span class="spacer"></span>Lorem ipsum dolor sit
                                     amet, consectetur adipiscing elit. <br><br>
                                     Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
